--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
   },
   "scripts": {
     "start": "node ./dist/index.js",
-    "dev": "tsc && node ./dist/index.js"
+    "dev": "npx tsc && node ./dist/index.js"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
-    "tsc": "^2.0.4",
     "typescript": "^5.7.2",
     "zod": "^3.23.8"
   }
